--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -550,6 +550,18 @@
                         <a href="https://github.com/madwort" target="_blank" title="madwort" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
                             <img alt="madwort" src="https://avatars.githubusercontent.com/u/2082895?v=4" class="rounded-full" loading="lazy" width="120" height="120">
                         </a>
+                        <a href="https://github.com/FranciscoKloganB" target="_blank" title="FranciscoKloganB" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="FranciscoKloganB" src="https://avatars.githubusercontent.com/u/25959244?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
+                        <a href="https://github.com/ytanikin" target="_blank" title="ytanikin" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="ytanikin" src="https://avatars.githubusercontent.com/u/9797137?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
+                        <a href="https://github.com/twhiston" target="_blank" title="twhiston" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="twhiston" src="https://avatars.githubusercontent.com/u/17698613?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
+                        <a href="https://github.com/WillGibson" target="_blank" title="WillGibson" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="WillGibson" src="https://avatars.githubusercontent.com/u/8738245?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
                     </div>
                 </div>
             </div>
