--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -187,19 +187,20 @@
                         <div aria-hidden="true" class="inset-0 absolute aspect-video border rounded-full -translate-y-1/2 group-hover:-translate-y-1/4 duration-300 bg-gradient-to-b from-warning-500 to-white dark:from-white dark:to-white blur-2xl opacity-25 dark:opacity-0 dark:group-hover:opacity-5"></div>
                         <div class="relative">
                             <div class="border border-warning-500/10 flex relative *:relative *:size-6 *:m-auto size-12 rounded-[calc(var(--card-border-radius)/2)] dark:bg-gray-900 dark:border-white/15 before:rounded-[calc((var(--card-border-radius)/2)-1px)] before:absolute before:inset-0 before:border-t before:border-white before:from-warning-100 dark:before:border-white/20 before:bg-gradient-to-b dark:before:from-white/10 dark:before:to-transparent before:shadow dark:before:shadow-gray-950">
-                                <svg class="text-[#000014] dark:text-white" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 256 185">
-                                    <path fill="#2396ED" d="M250.716 70.497c-5.765-4-18.976-5.5-29.304-3.5-1.2-10-6.725-18.749-16.333-26.499l-5.524-4-3.844 5.75c-4.803 7.5-7.205 18-6.485 28 .24 3.499 1.441 9.749 5.044 15.249-3.362 2-10.328 4.5-19.455 4.5H1.155l-.48 2c-1.682 9.999-1.682 41.248 18.014 65.247 14.892 18.249 36.99 27.499 66.053 27.499 62.93 0 109.528-30.25 131.386-84.997 8.647.25 27.142 0 36.51-18.75.24-.5.72-1.5 2.401-5.249l.961-2-5.284-3.25ZM139.986 0h-26.42v24.999h26.42V0Zm0 29.999h-26.42v24.999h26.42v-25Zm-31.225 0h-26.42v24.999h26.42v-25Zm-31.225 0H51.115v24.999h26.421v-25ZM46.311 59.998H19.89v24.999H46.31v-25Zm31.225 0H51.115v24.999h26.421v-25Zm31.225 0h-26.42v24.999h26.42v-25Zm31.226 0h-26.422v24.999h26.422v-25Zm31.225 0H144.79v24.999h26.422v-25Z"/>
+                                <svg class="text-[#000014] dark:text-white" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 256 256">
+                                    <circle cx="50%" cy="50%" r="48%" fill="white"/>
+                                    <path id="svg_1" d="m128,0c-70.692,0 -128,57.308 -128,128c0,70.693 57.308,128 128,128c70.693,0 128,-57.307 128,-128c0,-70.692 -57.307,-128 -128,-128m0,33.805c51.939,0 94.195,42.256 94.195,94.195c0,51.94 -42.256,94.195 -94.195,94.195c-51.939,0 -94.195,-42.255 -94.195,-94.195c0,-51.939 42.256,-94.195 94.195,-94.195m-12.5,121.838l-0.113,0a6.342,6.342 0 0 1 -4.953,-2.528l-28.874,-38.383a6.34,6.34 0 0 1 10.131,-7.62l23.993,31.893l6.863,-8.478a6.34,6.34 0 0 1 4.926,-2.35l0.008,0a6.331,6.331 0 0 1 4.93,2.364l6.59,8.187l37.692,-48.594a6.338,6.338 0 0 1 10.015,7.77l-42.608,54.933a6.338,6.338 0 0 1 -4.95,2.453l-0.057,0a6.335,6.335 0 0 1 -4.938,-2.364l-6.697,-8.319l-7.033,8.686a6.336,6.336 0 0 1 -4.926,2.35"/>
                                 </svg>
                             </div>
 
                             <div class="mt-6 pb-6 rounded-b-[--card-border-radius]">
-                                <p class="text-xs text-gray-700 dark:text-gray-300">GitHub Action to build and push Docker images with Buildx with full support of the features provided by Moby BuildKit builder toolkit.</p>
+                                <p class="text-xs text-gray-700 dark:text-gray-300">Generate beautiful SVG charts using your Wakatime stats to display in a personal or project README.<br/><br/><br/><br/></p>
                             </div>
                             <div class="flex gap-3 -mb-[--card-padding] py-4 border-t border-[--ui-light-border-color] dark:border-[--ui-dark-border-color]">
-                                <a href="#" target="_blank" class="group rounded-[--btn-border-radius] disabled:border *:select-none [&>*:not(.sr-only)]:relative *:disabled:opacity-20 disabled:text-gray-950 disabled:border-gray-200 disabled:bg-gray-100 dark:disabled:border-gray-800/50 disabled:dark:bg-gray-900 dark:*:disabled:!text-white text-gray-950 bg-gray-100 hover:bg-gray-200/75 active:bg-gray-100 dark:text-white dark:bg-gray-500/10 dark:hover:bg-gray-500/15 dark:active:bg-gray-500/10 flex gap-1.5 items-center text-sm h-8 px-3.5 justify-center">
+                                <a href="https://github.com/marketplace/actions/wakatime-stats-charts-generator-repo-racers-pro-support" target="_blank" class="group rounded-[--btn-border-radius] disabled:border *:select-none [&>*:not(.sr-only)]:relative *:disabled:opacity-20 disabled:text-gray-950 disabled:border-gray-200 disabled:bg-gray-100 dark:disabled:border-gray-800/50 disabled:dark:bg-gray-900 dark:*:disabled:!text-white text-gray-950 bg-gray-100 hover:bg-gray-200/75 active:bg-gray-100 dark:text-white dark:bg-gray-500/10 dark:hover:bg-gray-500/15 dark:active:bg-gray-500/10 flex gap-1.5 items-center text-sm h-8 px-3.5 justify-center">
                                     <span>Marketplace</span>
                                 </a>
-                                <a href="#" target="_blank" class="group flex items-center rounded-[--btn-border-radius] disabled:border *:select-none [&>*:not(.sr-only)]:relative *:disabled:opacity-20 disabled:text-gray-950 disabled:border-gray-200 disabled:bg-gray-100 dark:disabled:border-gray-800/50 disabled:dark:bg-gray-900 dark:*:disabled:!text-white text-gray-950 bg-gray-100 hover:bg-gray-200/75 active:bg-gray-100 dark:text-white dark:bg-gray-500/10 dark:hover:bg-gray-500/15 dark:active:bg-gray-500/10 size-8 justify-center">
+                                <a href="https://github.com/repo-racers/wakatime-charts-action" target="_blank" class="group flex items-center rounded-[--btn-border-radius] disabled:border *:select-none [&>*:not(.sr-only)]:relative *:disabled:opacity-20 disabled:text-gray-950 disabled:border-gray-200 disabled:bg-gray-100 dark:disabled:border-gray-800/50 disabled:dark:bg-gray-900 dark:*:disabled:!text-white text-gray-950 bg-gray-100 hover:bg-gray-200/75 active:bg-gray-100 dark:text-white dark:bg-gray-500/10 dark:hover:bg-gray-500/15 dark:active:bg-gray-500/10 size-8 justify-center">
                                     <span class="sr-only">Source Code</span>
                                     <svg class="size-5" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path fill="currentColor" d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33c.85 0 1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2"/></svg>
                                 </a>
@@ -548,23 +549,23 @@
                         <a href="https://github.com/tarekziade" target="_blank" title="tarekziade" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
                             <img alt="tarekziade" src="https://avatars.githubusercontent.com/u/250019?v=4" class="rounded-full" loading="lazy" width="120" height="120">
                         </a>
-                        <a href="https://github.com/madwort" target="_blank" title="madwort" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
-                            <img alt="madwort" src="https://avatars.githubusercontent.com/u/2082895?v=4" class="rounded-full" loading="lazy" width="120" height="120">
-                        </a>
                         <a href="https://github.com/FranciscoKloganB" target="_blank" title="FranciscoKloganB" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
                             <img alt="FranciscoKloganB" src="https://avatars.githubusercontent.com/u/25959244?v=4" class="rounded-full" loading="lazy" width="120" height="120">
-                        </a>
-                        <a href="https://github.com/ytanikin" target="_blank" title="ytanikin" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
-                            <img alt="ytanikin" src="https://avatars.githubusercontent.com/u/9797137?v=4" class="rounded-full" loading="lazy" width="120" height="120">
-                        </a>
-                        <a href="https://github.com/twhiston" target="_blank" title="twhiston" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
-                            <img alt="twhiston" src="https://avatars.githubusercontent.com/u/17698613?v=4" class="rounded-full" loading="lazy" width="120" height="120">
                         </a>
                         <a href="https://github.com/WillGibson" target="_blank" title="WillGibson" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
                             <img alt="WillGibson" src="https://avatars.githubusercontent.com/u/8738245?v=4" class="rounded-full" loading="lazy" width="120" height="120">
                         </a>
                         <a href="https://github.com/jpoehnelt" target="_blank" title="jpoehnelt" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
                             <img alt="jpoehnelt" src="https://avatars.githubusercontent.com/u/3392975?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
+                        <a href="https://github.com/dvjn" target="_blank" title="dvjn" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="dvjn" src="https://avatars.githubusercontent.com/u/62170586?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
+                        <a href="https://github.com/lucassabreu" target="_blank" title="lucassabreu" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="lucassabreu" src="https://avatars.githubusercontent.com/u/3457213?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
+                        <a href="https://github.com/gautamkrishnar" target="_blank" title="gautamkrishnar" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="gautamkrishnar" src="https://avatars.githubusercontent.com/u/8397274?v=4" class="rounded-full" loading="lazy" width="120" height="120">
                         </a>
                     </div>
                 </div>
