update contributors for digger

--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -564,6 +564,15 @@
                         <a href="https://github.com/gautamkrishnar" target="_blank" title="gautamkrishnar" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
                             <img alt="gautamkrishnar" src="https://avatars.githubusercontent.com/u/8397274?v=4" class="rounded-full" loading="lazy" width="120" height="120">
                         </a>
+                        <a href="https://github.com/motatoes" target="_blank" title="motatoes" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="motatoes" src="https://avatars.githubusercontent.com/u/1627972?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
+                        <a href="https://github.com/ZIJ" target="_blank" title="ZIJ" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="ZIJ" src="https://avatars.githubusercontent.com/u/1280498?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
+                        <a href="https://github.com/AppliNH" target="_blank" title="AppliNH" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="AppliNH" src="https://avatars.githubusercontent.com/u/47883101?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
                     </div>
                 </div>
             </div>
